fix some bugs in components

--- a/Source/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Source/Enter.UI/Components/Buttons/EntButton.razor
@@ -7,7 +7,7 @@
     @if (Icon != null && !Loading)
     {
         <span class="icon-wrapper">
-            <EntIcon class="icon" Icon="@Icon" IconSize="EntIconSize.Default" IconStyle="EntIconStyle.Light"/>
+            <EntIcon class="icon" Icon="@Icon" IconSize="EntIconSize.Medium" IconStyle="EntIconStyle.Light"/>
         </span>
     }
     
