--- a/Source/Enter.UI/Components/Inputs/EntInputText.razor
+++ b/Source/Enter.UI/Components/Inputs/EntInputText.razor
@@ -13,7 +13,7 @@
     @if (Icon != null)
     {
         <div class="ent-input-icon">
-            <EntIcon IconSize="EntIconSize.Default" Icon="@Icon" />
+            <EntIcon IconSize="EntIconSize.Medium" Icon="@Icon" />
         </div>
     }
 </div>
