--- a/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -8,6 +8,7 @@
         ItemDirection="@ItemDirection"
         Expandable="@Expandable"
         Closeable="@Closeable"
+        IconMinify="@IconMinify"
         ActiveClass="@ActiveClass"
         PanelClass="@PanelClass"
         TabNoContentMessage="@TabNoContentMessage"
