--- a/Source/Enter.UI/Components/Toolbar/EntToolbarButton.razor
+++ b/Source/Enter.UI/Components/Toolbar/EntToolbarButton.razor
@@ -6,7 +6,7 @@
     <div @attributes="AdditionalAttributes" class="@RootClass">
         @if (Icon != null && !Loading)
         {
-            <EntIcon Icon="@Icon" IconSize="EntIconSize.Default" class="ent-toolbar-button-icon" IconStyle="EntIconStyle.Light"/>
+            <EntIcon Icon="@Icon" IconSize="EntIconSize.Medium" class="ent-toolbar-button-icon" IconStyle="EntIconStyle.Light"/>
         }
         
         @if (Loading)
