--- a/Source/Enter.UI/Styles/components/_ent_modal.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_modal.component.scss
@@ -23,7 +23,7 @@
   top: 0;
   align-items: center;
   justify-content: center;
-  background-color: #33333366;
+  background-color: var(--ent-bg-body-backdrop);
   
   .ent-modal {
 
