--- a/Source/Enter.UI/Styles/themes/light.theme.scss
+++ b/Source/Enter.UI/Styles/themes/light.theme.scss
@@ -2,9 +2,11 @@
 
   // Background 
   
-  --ent-bg-body: #e6e6e6;
-  
+  --ent-bg-body: #eaeaea;
+  --ent-bg-body-backdrop: rgba(37, 37, 37, 0.5);
+  --ent-bg-body-backdrop-sm: rgba(37, 37, 37, 0.25);
   --ent-bg-base: #ffffff;
+  --ent-bg-base-2: #f8f8f8;
   
   --ent-bg-neutral: #fafafa;
   --ent-bg-neutral-highlight: #f5f5f5;
