--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -5,61 +5,63 @@
 @using Enter.UI.Abstractions.Components.Icon
 @using Enter.UI.Abstractions.Components.Inputs
 @using Enter.UI.Core
-<EntToolbar>
-    <EntButton  Appearance="ButtonAppearance.Default" Color="ButtonColor.Primary" Icon="EntIconName.Add"  >Add</EntButton>
-    <EntButton  Appearance="ButtonAppearance.Default" Icon="EntIconName.Note" Loading="true" >Document</EntButton>
-    <EntButton  Appearance="ButtonAppearance.Outline" Icon="EntIconName.Note"></EntButton>
-    <EntButton  Appearance="ButtonAppearance.Subtle" Icon="EntIconName.Upload"></EntButton>
-</EntToolbar>
-<EntCard Expandable="true" class="m-4" Title="Form Layout">
-    <CardBody>
-        <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
-            <DataAnnotationsValidator />
-            <div class="row">
-                <EntInputGroup For="()=>Input.Id" Label="شناسه" class="tablet:col-1/3 mb-4 ">
-                    <EntInputText Size="EntInputSize.Large"  @bind-Value="Input.Id" Icon="@EntIconName.ChevronLeft" />
-                </EntInputGroup>
-                 <EntInputGroup For="()=>Input.User" Label="نام" class="tablet:col-1/3 mb-4">
-                  
-                     <EntInputAutoComplete
-                          @ref="_autoCompleteReference"
-                         @bind-Value="Input.User"
-                                          ValueFunc="x=>x.Name"
-                                          TextFunc="x=>x.Name"
-                                          DataSources="DataSource"
-                                          Icon="@EntIconName.Search"
-                                          OnSearchChange="OnLastNameSearchChange"/>
-                  
-                </EntInputGroup>
-                <EntInputGroup 
-                    For="()=>Input.Role" 
-                    Label="نقش"  
-                    class="tablet:col-1/3 mb-4">
-                  
-
-                    <EntInputSelect @bind-Value="Input.Role"
-                               PlaceHolder="نقش مورد نظر را انتخاب نمایید"
-                               DataSources="Constants.Roles"
-                               ValueFunc="x=>x.Value"
-                               TextFunc="x=>x.Text" />
-
-                   
-                </EntInputGroup>
-                <EntInputGroup
-                    class="tablet:col-1/3 mb-4 " 
-                    Label="سن" 
-                    For="()=> Input.Age">
-                    <EntInputTextarea Rows="10"  @bind-Value="Input.Age" />
-                </EntInputGroup>
-            </div>
-            <div class="row">
-                <div class="tablet:col-1/3">
-                    <EntButton  type="submit">ارسال</EntButton>
+<div class="">
+    <EntToolbar class="my-4">
+        <EntButton  Appearance="ButtonAppearance.Default" Color="ButtonColor.Primary" Icon="EntIconName.Add"  >Add</EntButton>
+        <EntButton  Appearance="ButtonAppearance.Default" Icon="EntIconName.Note" Loading="true" >Document</EntButton>
+        <EntButton  Appearance="ButtonAppearance.Outline" Icon="EntIconName.Note"></EntButton>
+        <EntButton  Appearance="ButtonAppearance.Subtle" Icon="EntIconName.Upload"></EntButton>
+    </EntToolbar>
+    <EntCard Expandable="true"  Title="Form Layout">
+        <CardBody>
+            <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
+                <DataAnnotationsValidator />
+                <div class="row">
+                    <EntInputGroup For="()=>Input.Id" Label="شناسه" class="tablet:col-1/3 mb-4 ">
+                        <EntInputText Size="EntInputSize.Large"  @bind-Value="Input.Id" Icon="@EntIconName.ChevronLeft" />
+                    </EntInputGroup>
+                     <EntInputGroup For="()=>Input.User" Label="نام" class="tablet:col-1/3 mb-4">
+                      
+                         <EntInputAutoComplete
+                              @ref="_autoCompleteReference"
+                             @bind-Value="Input.User"
+                                              ValueFunc="x=>x.Name"
+                                              TextFunc="x=>x.Name"
+                                              DataSources="DataSource"
+                                              Icon="@EntIconName.Search"
+                                              OnSearchChange="OnLastNameSearchChange"/>
+                      
+                    </EntInputGroup>
+                    <EntInputGroup 
+                        For="()=>Input.Role" 
+                        Label="نقش"  
+                        class="tablet:col-1/3 mb-4">
+                      
+    
+                        <EntInputSelect @bind-Value="Input.Role"
+                                   PlaceHolder="نقش مورد نظر را انتخاب نمایید"
+                                   DataSources="Constants.Roles"
+                                   ValueFunc="x=>x.Value"
+                                   TextFunc="x=>x.Text" />
+    
+                       
+                    </EntInputGroup>
+                    <EntInputGroup
+                        class="tablet:col-1/3 mb-4 " 
+                        Label="سن" 
+                        For="()=> Input.Age">
+                        <EntInputTextarea Rows="10"  @bind-Value="Input.Age" />
+                    </EntInputGroup>
                 </div>
-            </div>
-        </EditForm>
-    </CardBody>
-</EntCard>
+                <div class="row">
+                    <div class="tablet:col-1/3">
+                        <EntButton  type="submit">ارسال</EntButton>
+                    </div>
+                </div>
+            </EditForm>
+        </CardBody>
+    </EntCard>
+</div>
 
 @code {
 
