--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -16,14 +16,17 @@
                 <EntNavMenu class="border-0">
                     <EntNavMenuGroup Title="Components" Icon="EntIconName.Note">
                         <EntNavMenuTextItem class="bg-light" Text="Buttons" Click="@(() => Navigate("/documents/buttons"))"/>
+                        <EntNavMenuTextItem class="bg-light" Text="Icons" Click="@(() => Navigate("/documents/icons"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Shimmer" Click="@(() => Navigate("/documents/shimmer"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Loading" Click="@(() => Navigate("/documents/loading"))"/>
+                        <EntNavMenuTextItem class="bg-light"  Text="Modals" Click="@(() => Navigate("/documents/modals"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="TreeView" Click="@(() => Navigate("/documents/treeview"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="NavMenu" Click="@(() => Navigate("/documents/navmenu"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Table" Click="@(() => Navigate("/documents/datatable"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Forms" Click="@(() => Navigate("/documents/form"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Pagination" Click="@(() => Navigate("/documents/pagination"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="MdiTab" Click="@(() => Navigate("/documents/mdi-tabs"))"/>
+                        <EntNavMenuTextItem class="bg-light"  Text="Upload Box" Click="@(() => Navigate("/documents/upload-box"))"/>
                     </EntNavMenuGroup>
                     <EntNavMenuGroup Title="Api" Icon="EntIconName.Home">
                         P
